Agregado SEO al proyecto

--- a/standard.html
+++ b/standard.html
@@ -5,7 +5,15 @@
     <!-- Required meta tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LBM Translations</title>
+
+    <title>LBM Translations - Standard</title>
+    <!-- All Search Engines -->
+    <meta name="googlebot" content="true,index,follow" />
+    <!-- Google Specific -->
+    <meta name="Translations" content="Literary Translations, Manufacturing, Retail, Healthcare, E-Commerce, E-Learning, Automotive, Gaming, Technology, Travel." />
+    <meta name="description" content="Literary Translations, Manufacturing, Retail, Healthcare, E-Commerce, E-Learning, Automotive, Gaming, Technology, Travel." />
+    <meta name="keywords" content="Human, Translations, English, Spanish" />
+    <meta name="author" content="LBM Translations" />
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,700&display=swap" rel="stylesheet" />
