--- a/services.html
+++ b/services.html
@@ -5,7 +5,15 @@
     <!-- Required meta tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LBM Translations</title>
+
+    <title>LBM Translations - Services</title>
+    <!-- All Search Engines -->
+    <meta name="googlebot" content="true,index,follow" />
+    <!-- Google Specific -->
+    <meta name="Translations" content="Human - Powered English-Spanish Translations. Professional Translations Services" />
+    <meta name="description" content="Translation services - 100% Human. Localization - for Websites, app, and software. Transcreation - marketing and advertising. Subtitling - films, series, documentaries, e-learning materials." />
+    <meta name="keywords" content="Human, Translations, English, Spanish" />
+    <meta name="author" content="LBM Translations" />
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,700&display=swap" rel="stylesheet" />
