--- a/references.html
+++ b/references.html
@@ -12,7 +12,7 @@
     <!-- Google Specific -->
     <meta name="Translations" content="Human - Powered English-Spanish Translations. Professional Translations Services" />
     <meta name="description" content="English Spanish Translations. Expertise. Experience" />
-    <meta name="keywords" content="Human, Translations, English, Spanish" />
+    <meta name="keywords" content="Human, Translations, English, Spanish, Translator" />
     <meta name="author" content="LBM Translations" />
 
     <!-- Google fonts -->
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
 
     <!-- Mi hoja de estilos -->
-    <link rel="stylesheet" href="CSS/main.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
 
     <!-- Iconos RRSS -->
     <script src="https://kit.fontawesome.com/7b4b33d2c8.js" crossorigin="anonymous"></script>
