--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Google Specific -->
     <meta name="Translations" content="Human - Powered English-Spanish Translations. Professional Translations Services" />
     <meta name="description" content="English Spanish Translations" />
-    <meta name="keywords" content="Human, Translations, English, Spanish" />
+    <meta name="keywords" content="Human, Translations, English, Spanish, Translator" />
     <meta name="author" content="LBM Translations" />
 
     <!-- Google fonts -->
