--- a/standard.html
+++ b/standard.html
@@ -12,7 +12,7 @@
     <!-- Google Specific -->
     <meta name="Translations" content="Literary Translations, Manufacturing, Retail, Healthcare, E-Commerce, E-Learning, Automotive, Gaming, Technology, Travel." />
     <meta name="description" content="Literary Translations, Manufacturing, Retail, Healthcare, E-Commerce, E-Learning, Automotive, Gaming, Technology, Travel." />
-    <meta name="keywords" content="Human, Translations, English, Spanish" />
+    <meta name="keywords" content="Human, Translations, English, Spanish, Translator" />
     <meta name="author" content="LBM Translations" />
 
     <!-- Google fonts -->
