--- a/references.html
+++ b/references.html
@@ -77,8 +77,9 @@
         <!-- Fondo de Página -->
         <div class="content fondo4">
             <!-- Título de Página -->
-            <h1 class="display-3">References</h1>
-
+            <div data-aos="fade-right">
+                <h1 class="display-3">References</h1>
+            </div>
             <!-- <div class="container"> -->
             <section class="contenedor-grid estilo-contenedor">
                 <!-- <div class="row row-cols-3"> -->
