--- a/comment.html
+++ b/comment.html
@@ -38,6 +38,9 @@
 
     <!-- my scripts -->
     <script type="text/javascript" src="assets/js/contacto.js"></script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/LBMTransalations.ico" type="image/ico" />
 </head>
 
 <body>
