--- a/references.html
+++ b/references.html
@@ -35,6 +35,9 @@
 
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/LBMTransalations.ico" type="image/ico" />
 </head>
 
 <body>
