--- a/comment.html
+++ b/comment.html
@@ -85,7 +85,7 @@
 			<div class="content fondo5">
 				<!-- Título -->
 				<div data-aos="fade-right">
-					<h1 class="display-3">Get my free quote</h1>
+					<h1 class="display-4">Get my free quote</h1>
 				</div>
 				<!-- Formulario -->
 				<div class="container">
@@ -172,11 +172,11 @@
 						</div>
 
 						<!-- google recaptcha -->
-						<script src="https://www.google.com/recaptcha/api.js"></script>
+						<!-- <script src="https://www.google.com/recaptcha/api.js"></script>
 						<div
 							class="g-recaptcha"
 							data-sitekey="6LcDpKAUAAAAAPMVo11fCzBYnge6HnmSAg2PRDhP"
-						></div>
+						></div> -->
 
 						<hr />
 						<!-- submit -->
