Grid responsive en References

--- a/comment.html
+++ b/comment.html
@@ -12,7 +12,7 @@
     <!-- Google Specific -->
     <meta name="Translations" content="Human - Powered English-Spanish Translations. Professional Translations Services" />
     <meta name="description" content="English Spanish Translations. Contact" />
-    <meta name="keywords" content="Human, Translations, English, Spanish, Translator" />
+    <meta name="keywords" content="Human, Translations, English, Spanish, Translator, Translation" />
     <meta name="author" content="LBM Translations" />
 
     <!-- Google fonts -->
