--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
     <!-- Google Specific -->
     <meta name="Translations" content="Human - Powered English-Spanish Translations. Professional Translations Services" />
     <meta name="description" content="Translation services - 100% Human. Localization - for Websites, app, and software. Transcreation - marketing and advertising. Subtitling - films, series, documentaries, e-learning materials." />
-    <meta name="keywords" content="Human, Translations, English, Spanish, Translator" />
+    <meta name="keywords" content="Human, Translations, English, Spanish, Translator, Translation" />
     <meta name="author" content="LBM Translations" />
 
     <!-- Google fonts -->
