--- a/references.html
+++ b/references.html
@@ -12,7 +12,7 @@
     <!-- Google Specific -->
     <meta name="Translations" content="Human - Powered English-Spanish Translations. Professional Translations Services" />
     <meta name="description" content="English Spanish Translations. Expertise. Experience" />
-    <meta name="keywords" content="Human, Translations, English, Spanish, Translator" />
+    <meta name="keywords" content="Human, Translations, English, Spanish, Translator, Translation" />
     <meta name="author" content="LBM Translations" />
 
     <!-- Google fonts -->
@@ -83,40 +83,61 @@
             <div data-aos="fade-right">
                 <h1 class="display-4">References</h1>
             </div>
-            <!-- <div class="container"> -->
-            <section class="contenedor-grid estilo-contenedor">
-                <!-- <div class="row row-cols-3"> -->
-                <div data-aos="zoom-in" class="col">
-                    <img class="img44 hvr-glow" src="img/AMC logo.png " loading="lazy" alt="AMC " />
-                </div>
-                <div data-aos="zoom-in" class="col">
-                    <img class="img44 hvr-glow" src="img/Craft logo.jpeg " loading="lazy" alt="Craft " />
-                </div>
-                <div data-aos="zoom-in" class="col">
-                    <img class="img44 hvr-glow" src="img/Globallink logo.jpeg " loading="lazy" alt="Globallink " />
-                </div>
-                <div data-aos="zoom-in">
-                    <img class="img44 hvr-glow" src="img/LaSalle Logo.png " loading="lazy" alt="LaSalle " />
-                </div>
 
-                <div data-aos="zoom-in" class="col">
-                    <img class="img44 hvr-glow" src="img/REV logo.png " loading="lazy" alt="REV " />
-                </div>
-                <div data-aos="zoom-in" class="col">
-                    <img class="img44 hvr-glow" src="img/synergium.png " loading="lazy" alt="Synergium " />
-                </div>
-                <div data-aos="zoom-in" class="col">
-                    <img class="img44 hvr-glow" src="img/Telemundo logo.jpeg " loading="lazy" alt="Telemundo " />
-                </div>
-                <div data-aos="zoom-in" class="col">
-                    <img class="img44 hvr-glow" src="img/transperfect logo.png " loading="lazy" alt="Transperfect " />
-                </div>
-                <div data-aos="zoom-in" class="col">
-                    <img class="img44 hvr-glow" src="img/aws.png " loading="lazy" alt="AWS " />
-                </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in" class="col">
+                                    <img class="img44 hvr-glow" src="img/aws.png " loading="lazy" alt="AWS " />
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in" class="col">
+                                    <img class="img44 hvr-glow" src="img/AMC logo.png " loading="lazy" alt="AMC " />
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in" class="col">
+                                    <img class="img44 hvr-glow" src="img/Craft logo.jpeg " loading="lazy" alt="Craft " />
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in" class="col">
+                                    <img class="img44 hvr-glow" src="img/Globallink logo.jpeg " loading="lazy" alt="Globallink " />
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in">
+                                    <img class="img44 hvr-glow" src="img/LaSalle Logo.png " loading="lazy" alt="LaSalle " />
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in" class="col">
+                                    <img class="img44 hvr-glow" src="img/REV logo.png " loading="lazy" alt="REV " />
+                                </div>
+                            </div>
 
-                <!-- </div> -->
-            </section>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in" class="col">
+                                    <img class="img44 hvr-glow" src="img/Telemundo logo.jpeg " loading="lazy" alt="Telemundo " />
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in" class="col">
+                                    <img class="img44 hvr-glow" src="img/transperfect logo.png " loading="lazy" alt="Transperfect " />
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div data-aos="zoom-in" class="col">
+                                    <img class="img44 hvr-glow" src="img/synergium.png " loading="lazy" alt="Synergium " />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
